tests/fail/ch_nightly/missing_bracket.stderr
error: Missing '}' after given '{'. Literal '{' need to be escaped as '{{'
 --> $DIR/missing_bracket.rs:2:31
  |
2 |     sscanf::scanf!("hi", "asdf{asdf");
  |                               ^^^^^^

error: Unexpected standalone '}'. Literal '}' need to be escaped as '}}'
 --> $DIR/missing_bracket.rs:3:31
  |
3 |     sscanf::scanf!("hi", "asdf}asdf");
  |                               ^
